Minor bug fix where document headers are invisible. Also fixed petition detail design.

--- a/frontend/src/containers/SnuVoice/TellMe/DocumentCreate/DocumentCreate.css
+++ b/frontend/src/containers/SnuVoice/TellMe/DocumentCreate/DocumentCreate.css
@@ -10,6 +10,7 @@
 
 .preview {
     background-color: white;
+    color: black !important;
     min-height: 400px;
 }
 
@@ -18,13 +19,19 @@
     text-align: left;
 }
 
+/* h3, h4 {
+    color: black;
+} */
 
-
+.inputTab {
+    padding-left: 4%;
+    padding-right: 4%;
+}
 
 .document {
-    color: black;
+    color: black !important;
     text-align: left;
-    padding-left: 5%;
+    padding-left: 5%; 
 }
 
 
